mario not jumping bug - solved

--- a/css/style.css
+++ b/css/style.css
@@ -17,21 +17,54 @@
     position: absolute;
     bottom: 0;
     width: 80px;
+    right: 0px;
     animation: pipe-animation 2s infinite linear;
 }
 
 .mario {
     width: 150px;
-    position: absolute;
     bottom: 0;
+    position: absolute;
+}
+
+.jump {
+    animation: jump 500ms ease-out;
+
 }
 
 @keyframes pipe-animation {
     from {
-        right: -80px;
+        right: 0;
     }
 
     to {
         right: 100%;
     }
+}
+
+@keyframes jump {
+
+0% {
+    bottom: 0;
+}
+
+40% {
+    bottom: 180px;
+}
+
+
+50% {
+    bottom: 180px;
+}
+
+60% {
+    bottom: 180px;
+}
+
+
+100% {
+    bottom: 0;
+}
+
+
 }
